# pyTRACTnmr

./: README.md  __init__.py  main.py  pyproject.toml  window.py
src/pyTRACTnmr/: analysis_panel.py  data_panel.py  exporters.py  main.py  processing.py  widgets.py  window.py  workers.py
src/pyTRACTnmr/demo_data/1/: acqu  acqu2  acqu2s  acqus  adcInfo_TRX1.xml  audita.txt  format.ased  format.temp  pulseprogram.precomp  scon2  ser  shimvalues  specpar  uxnmr.info  uxnmr.par  vtc_pid_settings
src/pyTRACTnmr/demo_data/1/lists/pp/: tractf3gpphwg
src/pyTRACTnmr/demo_data/1/lists/vd/: tract_vd_list_2_DRB2D2
src/pyTRACTnmr/demo_data/1/pdata/1/: auditc.txt  auditp.txt  outd  proc  proc2  proc2s  procs  title
