[project]
name = "tract-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "nmrglue>=0.11",
    "numpy>=2.4.2",
    "pyside6>=6.10.2",
    "pyside6-stubs>=6.7.3.0",
    "scipy>=1.17.0",
    "scipy-stubs>=1.17.0.2",
]
