[project]
name = "pyTRACTnmr"
version = "0.1.2b2"
description = "A simple gui based application to process and analyse TRACT data from NMR spectroscopy."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "nmrglue>=0.11",
    "numpy>=2.4.2",
    "pyside6>=6.10.2",
    "pyside6-stubs>=6.7.3.0",
    "scipy>=1.17.0",
    "scipy-stubs>=1.17.0.2",
]

[project.urls]
Homepage = "https://github.com/debadutta-patra/pyTRACTnmr"
Repository = "https://github.com/debadutta-patra/pyTRACTnmr"
Issues = "https://github.com/debadutta-patra/pyTRACTnmr/issues"


[project.scripts]
pyTRACTnmr = "pyTRACTnmr.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyTRACTnmr"]
